@@ -85,6 +85,9 @@ let flat_float_array = @flat_float_array@
 let function_sections = @function_sections@
 let afl_instrument = @afl@
 
+let bytecode_runtime_id = {@QS@|@bytecode_runtime_id@|@QS@}
+let native_runtime_id = {@QS@|@native_runtime_id@|@QS@}
+
 let native_compiler = @native_compiler@
 
 let architecture = {@QS@|@arch@|@QS@}
